--- a/NAPS2.Core/WinForms/FEditProfile.fr.resx
+++ b/NAPS2.Core/WinForms/FEditProfile.fr.resx
@@ -12,13 +12,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="label1.Text" xml:space="preserve">
+  <data name="lbl_device.Text" xml:space="preserve">
     <value>Périphérique :</value>
   </data>
   <data name="btnChooseDevice.Text" xml:space="preserve">
     <value>Sélectionner...</value>
   </data>
-  <data name="label2.Text" xml:space="preserve">
+  <data name="lbl_papersource.Text" xml:space="preserve">
     <value>Source du papier :</value>
   </data>
   <data name="btnOK.Text" xml:space="preserve">
@@ -30,31 +30,31 @@
   <data name="rdbNative.Text" xml:space="preserve">
     <value>Interface native</value>
   </data>
-  <data name="label3.Text" xml:space="preserve">
+  <data name="lbl_bitdepth.Text" xml:space="preserve">
     <value>Profondeur d'échantillonnage :</value>
   </data>
-  <data name="label4.Text" xml:space="preserve">
+  <data name="lbl_pagesize.Text" xml:space="preserve">
     <value>Taille de la page :</value>
   </data>
-  <data name="label5.Text" xml:space="preserve">
+  <data name="lbl_resolution.Text" xml:space="preserve">
     <value>Résolution :</value>
   </data>
-  <data name="label6.Text" xml:space="preserve">
+  <data name="lbl_brightness.Text" xml:space="preserve">
     <value>Luminosité :</value>
   </data>
-  <data name="label7.Text" xml:space="preserve">
+  <data name="lbl_contrast.Text" xml:space="preserve">
     <value>Contraste :</value>
   </data>
   <data name="btnCancel.Text" xml:space="preserve">
     <value>&amp;Annuler</value>
   </data>
-  <data name="label8.Text" xml:space="preserve">
+  <data name="lbl_displayname.Text" xml:space="preserve">
     <value>Nom d'affichage :</value>
   </data>
-  <data name="label9.Text" xml:space="preserve">
+  <data name="lbl_horizontalalign.Text" xml:space="preserve">
     <value>Alignement horizontal :</value>
   </data>
-  <data name="label10.Text" xml:space="preserve">
+  <data name="lbl_scale.Text" xml:space="preserve">
     <value>Échelle :</value>
   </data>
   <data name="rdTWAIN.Text" xml:space="preserve">
@@ -74,6 +74,57 @@
   </data>
   <data name="btnAdvanced.Text" xml:space="preserve">
     <value>&amp;Avancés…</value>
+  </data>
+  <data name="InfoDisplayCaps.Text" xml:space="preserve">
+    <value>* Here are the detected Capabilities</value>
+  </data>
+  <data name="lab_Cap.Text" xml:space="preserve">
+    <value>Detected Capabilities (Twain)</value>
+  </data>
+  <data name="cmbAutoRotation.Items" xml:space="preserve">
+    <value>Enabled</value>
+  </data>
+  <data name="cmbAutoRotation.Items1" xml:space="preserve">
+    <value>Disabled</value>
+  </data>
+  <data name="lab_AutoRotate.Text" xml:space="preserve">
+    <value>Auto-Rotation (Twain)</value>
+  </data>
+  <data name="cmbAutoDeskew.Items" xml:space="preserve">
+    <value>Enabled</value>
+  </data>
+  <data name="cmbAutoDeskew.Items1" xml:space="preserve">
+    <value>Disabled</value>
+  </data>
+  <data name="lab_autoDeskew.Text" xml:space="preserve">
+    <value>Auto-Deskew (Twain)</value>
+  </data>
+  <data name="cmbAutoBorderDetection.Items" xml:space="preserve">
+    <value>Enabled</value>
+  </data>
+  <data name="cmbAutoBorderDetection.Items1" xml:space="preserve">
+    <value>Disabled</value>
+  </data>
+  <data name="lbl_AutoBorderDetect.Text" xml:space="preserve">
+    <value>Automatic border detection (Twain)</value>
+  </data>
+  <data name="cmbPaperType.Items" xml:space="preserve">
+    <value>Normal</value>
+  </data>
+  <data name="cmbPaperType.Items1" xml:space="preserve">
+    <value>Fragile</value>
+  </data>
+  <data name="cmbPaperType.Items2" xml:space="preserve">
+    <value>Thick</value>
+  </data>
+  <data name="cmbPaperType.Items3" xml:space="preserve">
+    <value>TriFold</value>
+  </data>
+  <data name="cmbPaperType.Items4" xml:space="preserve">
+    <value>Photograph</value>
+  </data>
+  <data name="LBL_Paper.Text" xml:space="preserve">
+    <value>Paper type:</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Paramètres de profil</value>
