- Recovered project are deleted when imported. You can close them to resave them or you have a choice of not keeping it when closing the application. (Still deciding about that feature as it might be dangerous if someone does not read correctly.) - Fixed some little issues with the system and added more strings.

--- a/NAPS2.Core/Lang/Resources/MiscResources.fr.resx
+++ b/NAPS2.Core/Lang/Resources/MiscResources.fr.resx
@@ -498,4 +498,10 @@
   <data name="AcquiringData" xml:space="preserve">
     <value>Acquisition des données...</value>
   </data>
+  <data name="Rescan" xml:space="preserve">
+    <value>Voulez-vous remplacer l'image sélectionnée?</value>
+  </data>
+  <data name="Rescan_title" xml:space="preserve">
+    <value>Renumériser l'image</value>
+  </data>
 </root>
