-Now will get unamed (untitled) project defined at startup and not used the saved value. The "untitled" term can be translasted too as it was put in misc ressources and it is not hardcoded anymore.

--- a/NAPS2.Core/Lang/Resources/MiscResources.fr.resx
+++ b/NAPS2.Core/Lang/Resources/MiscResources.fr.resx
@@ -504,4 +504,7 @@
   <data name="Rescan_title" xml:space="preserve">
     <value>Renumériser l'image</value>
   </data>
+  <data name="ProjectName" xml:space="preserve">
+    <value>Sans nom</value>
+  </data>
 </root>
