Changed the french term.

--- a/NAPS2.Core/Lang/Resources/MiscResources.fr.resx
+++ b/NAPS2.Core/Lang/Resources/MiscResources.fr.resx
@@ -505,6 +505,6 @@
     <value>Renumériser l'image</value>
   </data>
   <data name="ProjectName" xml:space="preserve">
-    <value>Sans nom</value>
+    <value>Sans titre</value>
   </data>
 </root>
