--- a/NAPS2.Core/WinForms/FDesktop.fr.resx
+++ b/NAPS2.Core/WinForms/FDesktop.fr.resx
@@ -387,4 +387,10 @@
   <data name="$this.Text" xml:space="preserve">
     <value>Not Another PDF Scanner 2 - Cricri Edition</value>
   </data>
+  <data name="tsBarCodeCheck.Text" xml:space="preserve">
+    <value>Recherche de code à barres</value>
+  </data>
+  <data name="tsBarCodeCheck.ToolTipText" xml:space="preserve">
+    <value>Fait une recherche dans les images pour des codes à barres</value>
+  </data>
 </root>
